--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,11 @@ a {
   color: white;
   text-decoration: none; /* no underline */
 }
+
+.testbutton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -50px;
+}
