added login component

--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,11 @@
+/* Full app page */
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #318197;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 /* Header */
 header {
   padding:10px 0px;
-  transition: all 300ms ease-in;
 }
 
 header .header_logo {
@@ -51,23 +16,11 @@ header .header_text {
   font-size: 50px;
   font-family: Gelasio serif;
 }
-.container {
-  width:1100px;
-  margin: 0 auto;
-}
+
 .page_container {
   min-height: 75vh;
   padding-top: 85px;
 }
-.main_loader {
-  text-align: center;
-  margin-top: 100px;
-}
-
-.page_wrapper {
-  padding-top: 85px;
-}
-
 
 /* Footer */
 .footer {
@@ -161,4 +114,123 @@ a {
   height: 150px;
   z-index: -10;
 
+}
+
+/* Login */
+
+
+.PageSwitcher {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10%;
+}
+
+.PageSwitcher__Item {
+  background-color: #4C5D72;
+  color: #9DA6B1;
+  padding: 10px 25px;
+  cursor: pointer;
+  font-size: .9em;
+  border: none;
+  outline: none;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.PageSwitcher__Item--Active {
+  background-color: #5ED0C0;
+  color: white;
+}
+
+.PageSwitcher__Item:first-child {
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+}
+.PageSwitcher__Item:last-child {
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
+.FormCenter {
+  margin-top: 80px;
+  margin-bottom: 100px;
+  margin-left: 10px;
+  display : inline-block;
+}
+.FormCenter1 {
+  margin-top: 0px;
+  margin-left: 10px;
+  display : inline-block;
+}
+
+.FormTitle {
+  color: #707C8B;
+  font-weight: 300;
+  margin-bottom: 50px;
+}
+
+.FormTitle__Link {
+  color: #707C8B;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+  margin: 0 10px;
+  padding-bottom: 5px;
+}
+
+.FormTitle__Link:first-child {
+  margin-left: 0;
+}
+
+.FormTitle__Link--Active {
+  color: white;
+  border-bottom: 1px solid #199087;
+}
+
+.FormField {
+ 
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 250px;
+}
+.FormField1 {
+  
+  margin-bottom: 50px;
+  margin-left: 100px;
+  
+}
+
+.FormField__Label {
+  display: block;
+  text-transform: uppercase;
+  font-size: .9em;
+  color: white;
+
+}
+.FormField__Input {
+  width: 85%;
+  background-color: transparent;
+  border: none;
+  color:black;
+  outline: none;
+  border-bottom: 1px solid #445366;
+  font-size: 1em;
+  font-weight: 300;
+  padding-bottom: 10px;
+  margin-top: 20px;
+}
+
+.FormField__Input::placeholder {
+  color: #616E7F;
+}
+
+.FormField__Button {
+  background-color: #52C4B9;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  padding: 15px 70px;
+  font-size: .8em;
+  font-weight: 500;
 }
