--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ a {
 .lefthalf{
   position: absolute;
   overflow: hidden;
-  background-color:#0099cc;
+  background-color:#70bdd6;
   width: 50%;
   height: 91.25%;
   margin-left: 0px;
@@ -119,48 +119,43 @@ a {
 /* Login */
 
 
-.PageSwitcher {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 10%;
-}
-
-.PageSwitcher__Item {
-  background-color: #4C5D72;
-  color: #9DA6B1;
-  padding: 10px 25px;
-  cursor: pointer;
-  font-size: .9em;
-  border: none;
-  outline: none;
-  display: inline-block;
-  text-decoration: none;
-}
-
-.PageSwitcher__Item--Active {
-  background-color: #5ED0C0;
-  color: white;
-}
-
-.PageSwitcher__Item:first-child {
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-}
-.PageSwitcher__Item:last-child {
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
+.grid-container{
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-column-gap: 200px;
 }
 
 .FormCenter {
-  margin-top: 80px;
+  margin-top:30%;
   margin-bottom: 100px;
-  margin-left: 10px;
+  margin-left: 20%;
+  font-size: 20px;
   display : inline-block;
+  transform: translateY(-30px)
+}
+.FormCenter h3 {
+  text-align: left;
+  margin-left: 100px;
+  font-size: 30px;
+  border-bottom: rgb(102, 105, 109) double;
+  max-width: 100px;
+
 }
 .FormCenter1 {
-  margin-top: 0px;
-  margin-left: 10px;
+  font-size: 20px;
+  margin-top: 30%;
+  margin-left: 8%;
   display : inline-block;
+  transform: translateX(-60px);
+  transform: translateY(-40px);
+}
+.FormCenter1 h3{
+  font-size: 30px;
+  text-align: left;
+  margin-left: 250px;
+  border-bottom: rgb(102, 105, 109) double;
+  max-width: 100px;
+
 }
 
 .FormTitle {
@@ -221,7 +216,8 @@ a {
 }
 
 .FormField__Input::placeholder {
-  color: #616E7F;
+  color: rgb(192, 189, 189);
+  opacity: 1;
 }
 
 .FormField__Button {
@@ -233,4 +229,56 @@ a {
   padding: 15px 70px;
   font-size: .8em;
   font-weight: 500;
+}
+
+
+/* result */
+
+.cards-collection{
+margin-top: 25vh;
+display: flex;
+margin-left: 5%;
+flex-wrap: wrap;
+
+}
+
+.card{
+
+  padding: 50px;
+  background-color: rgb(185, 197, 199);
+  margin: 10px;
+  width: 13%;
+
+}
+
+/* cards */
+.card_wrapper {
+  background: #ffffff;
+  border: 1px solid #ececec;
+  width: 300px;
+  padding: 10px 10px 20px 10px;
+  font-family: 'Righteous';
+}
+
+.card_wrapper .card_thmb {
+  border: 1px solid #eeeeee;
+  width:100%;
+  height:250px;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-size: contain !important;
+}
+.card_wrapper .card_info {
+  position: relative;
+  margin-left: 25%;
+  margin-top: 26px;
+}
+.card_wrapper .card_name {
+  position: absolute;
+  bottom: 0px;
+}
+.card_wrapper .card_name span { 
+  display: block;
+  font-size: 25px;
+  color: #3f70e0;
 }
