--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
 }
 
 /* Header */
-header {
-  padding:10px 0px;
+#header {
+  background-image: linear-gradient(to right, white, #70bdd6,#70bdd6);
 }
 
 header .header_logo {
@@ -28,7 +28,7 @@ header .header_text {
   text-align: center;
   font-size: 25px;
   color:#ffffff;
-  background:#000000be;
+  background-image: linear-gradient(to right, white, #70bdd6,#70bdd6);
 }
 .font_righteous {
   font-family: Righteous, cursive;
@@ -104,7 +104,7 @@ a {
 }
 
 .bck-logo{
-  background-color:#0099cc;
+  background-color:#70bdd6;
   position: absolute;
   border-radius: 100%;
   border: 10px solid rgb(255, 255, 255);
@@ -137,8 +137,9 @@ a {
   text-align: left;
   margin-left: 100px;
   font-size: 30px;
-  border-bottom: rgb(102, 105, 109) double;
+  border-bottom:#70bdd6 double;
   max-width: 100px;
+  color: #70bdd6;
 
 }
 .FormCenter1 {
@@ -153,8 +154,9 @@ a {
   font-size: 30px;
   text-align: left;
   margin-left: 250px;
-  border-bottom: rgb(102, 105, 109) double;
+  border-bottom: white double;
   max-width: 100px;
+  color: white;
 
 }
 
@@ -221,8 +223,8 @@ a {
 }
 
 .FormField__Button {
-  background-color: #52C4B9;
-  color: white;
+  background-color: white;
+  color: #70bdd6;
   border: none;
   outline: none;
   border-radius: 25px;
@@ -237,15 +239,15 @@ a {
 .cards-collection{
 margin-top: 25vh;
 display: flex;
-margin-left: 5%;
 flex-wrap: wrap;
+background-image: linear-gradient(#70bdd6, white, #70bdd6);
+border-radius: 10%;
 
 }
 
 .card{
 
   padding: 50px;
-  background-color: rgb(185, 197, 199);
   margin: 10px;
   width: 13%;
 
@@ -254,7 +256,7 @@ flex-wrap: wrap;
 /* cards */
 .card_wrapper {
   background: #ffffff;
-  border: 1px solid #ececec;
+  border: 1px solid #ffffff;
   width: 300px;
   padding: 10px 10px 20px 10px;
   font-family: 'Righteous';
@@ -264,6 +266,7 @@ flex-wrap: wrap;
   border: 1px solid #eeeeee;
   width:100%;
   height:250px;
+  border-radius: 100%;
   background-repeat: no-repeat !important;
   background-position: center !important;
   background-size: contain !important;
@@ -281,4 +284,9 @@ flex-wrap: wrap;
   display: block;
   font-size: 25px;
   color: #3f70e0;
+}
+.jiggle:hover{
+  -webkit-animation: rubberBand 1s;
+  animation: rubberBand 0.75s;
+
 }
