--- a/src/App.css
+++ b/src/App.css
@@ -449,3 +449,22 @@ a {
             transition-duration: 0s;
   }
 }
+
+
+/* button for logout and showing details */
+
+.button-details{
+  margin-top: 30%;
+
+}
+.button-details button{
+  background-color: #70bdd6;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  margin-left: 30px;
+  padding: 15px 70px;
+  font-size: 30px;
+  font-weight: 500;
+}
