--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -87,7 +87,7 @@ a {
   overflow: hidden;
   background-color:#70bdd6;
   width: 50%;
-  height: 91.25%;
+  height: 100vh;
   margin-left: 0px;
   z-index: -10;
 }
@@ -123,6 +123,7 @@ a {
   display: grid;
   grid-template-columns: auto auto;
   grid-column-gap: 200px;
+  height: 100%;
 }
 
 .FormCenter {
