added the slider functionalities

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -246,6 +246,65 @@ a {
   font-size: 40px;
   text-align: left;
 }
+.scroll-down {
+  opacity: 1;
+  -webkit-transition: all .5s ease-in 3s;
+  transition: all .5s ease-in 3s;
+}
+
+.scroll-down {
+  position: absolute;
+  bottom: 30px;
+  left: 48%;
+  margin-left: -16px;
+  display: block;
+  width: 100px;
+  height: 100px;
+  border: 5px solid #70bdd6;
+  background-size: 50px auto;
+  border-radius: 50%;
+  z-index: 2;
+  -webkit-animation: bounce 2s infinite 2s;
+  animation: bounce 2s infinite 2s;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  transform: scale(1)
+}
+
+.scroll-down:before {
+    position: absolute;
+    top: calc(50% - 8px);
+    left: calc(50% - 6px);
+    transform: rotate(-45deg);
+    display: block;
+    width: 12px;
+    height: 12px;
+    content: "";
+    border: 2px solid #70bdd6;
+    border-width: 0px 0 2px 2px;
+}
+
+@keyframes bounce {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -webkit-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
 
 @import url("https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap");
 :root {
@@ -461,7 +520,7 @@ a {
   margin-top: 30%;
 
 }
-.button-details button{
+ button{
   background-color: #70bdd6;
   color: white;
   border: none;
@@ -471,4 +530,5 @@ a {
   padding: 15px 70px;
   font-size: 30px;
   font-weight: 500;
+  margin-bottom: 5%;
 }
