--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -241,11 +241,39 @@ a {
 /* result */
 
 .message{
-  margin-left: 30%;
+  margin-left: 20%;
   transform: translate(0px,300px);
-  font-size: 40px;
+  font-size: 20px;
   text-align: left;
 }
+
+.typewriter h1 {
+  color: #70bdd6;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid #70bdd6; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 2s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #70bdd6; }
+}
+
+/* scroll  */
+
 .scroll-down {
   opacity: 1;
   -webkit-transition: all .5s ease-in 3s;
